@@ -7,6 +7,8 @@
 	* inst/examples/tintPDF.Rmd: Moved from vignettes/
 	* inst/examples/tintHTML.Rmd: Idem
 
+	* tests/simple.R: Pause local pdf test
+
 2019-04-09  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/rmarkdown/templates/tintPdf/resources/tintPdf-template.tex:
